# cookiecutter-poetry-djangopackage

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .#README.md  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  Justfile  LICENSE  Makefile  README.md  README.rst  SECURITY.md  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg
{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml  codestyle.yml
{{ cookiecutter.project_slug }}/docs/: Makefile  changelog.md  code_of_conduct.md  conf.py  index.md  index.rst  quickstart.md  quickstart.rst  security.md
{{ cookiecutter.project_slug }}/locale/: README.md
{{ cookiecutter.project_slug }}/tests/: django_settings.py  test_models.py  urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: apps.py  urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/templates/{{ cookiecutter.package_name }}/: app_base.html
